--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@angular/platform-browser": "~9.1.12",
     "@angular/platform-browser-dynamic": "~9.1.12",
     "@angular/router": "~9.1.12",
+    "chalk": "^4.1.1",
     "express": "^4.17.1",
     "path": "^0.12.7",
     "rxjs": "~6.5.4",
